# GP_VisitBuddy

./: .gitignore  MODEL_SETUP.md  README.md  TROUBLESHOOTING.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/medicalappointmentcompanion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native_bridge/: whisper_jni.cpp
app/src/main/cpp/whisper/: whisper_wrapper.h
app/src/main/java/com/example/medicalappointmentcompanion/: MainActivity.kt
app/src/main/java/com/example/medicalappointmentcompanion/audio/: AudioRecorder.kt  WaveHelper.kt
app/src/main/java/com/example/medicalappointmentcompanion/extraction/: MedicalExtractor.kt  SchemaGuidedExtractor.kt
app/src/main/java/com/example/medicalappointmentcompanion/model/: AppState.kt  Appointment.kt  MedicalSchema.kt
app/src/main/java/com/example/medicalappointmentcompanion/storage/: ExtractionStorage.kt  LocalStorage.kt
app/src/main/java/com/example/medicalappointmentcompanion/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/medicalappointmentcompanion/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/medicalappointmentcompanion/whisper/: WhisperContext.kt  WhisperCpuConfig.kt  WhisperLib.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/medicalappointmentcompanion/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
test_transcripts/: synthetic_medical_transcripts.md
